@startuml
entity "Users" {
  *id : int <<PK>>
  --
  username : varchar
  email : varchar
  password_hash : varchar
  role : varchar
}

entity "Products" {
  *id : int <<PK>>
  --
  name : varchar
  price : float
  stock : int
}

entity "Orders" {
  *id : int <<PK>>
  --
  user_id : int <<FK>>
  product_id : int <<FK>>
  quantity : int
  status : varchar
}

Users ||--o{ Orders
Products ||--o{ Orders
@enduml